project(WPFToolkit.Extended LANGUAGES CSharp)

add_library(WPFToolkit.Extended SHARED
					"${CMAKE_CURRENT_SOURCE_DIR}/BusyIndicator/Themes/Generic.xaml"
					"${CMAKE_CURRENT_SOURCE_DIR}/ButtonSpinner/Themes/Generic.xaml"
					"${CMAKE_CURRENT_SOURCE_DIR}/CalculatorUpDown/Themes/Generic.xaml"
					"${CMAKE_CURRENT_SOURCE_DIR}/Calculator/Themes/Generic.xaml"
					"${CMAKE_CURRENT_SOURCE_DIR}/ChildWindow/Themes/Generic.xaml"
					"${CMAKE_CURRENT_SOURCE_DIR}/Chromes/Themes/Generic.xaml"
					"${CMAKE_CURRENT_SOURCE_DIR}/ColorCanvas/Themes/Generic.xaml"
					"${CMAKE_CURRENT_SOURCE_DIR}/ColorPicker/Themes/Generic.xaml"
					"${CMAKE_CURRENT_SOURCE_DIR}/DateTimeUpDown/Themes/Generic.xaml"
					"${CMAKE_CURRENT_SOURCE_DIR}/Magnifier/Themes/Generic.xaml"
					"${CMAKE_CURRENT_SOURCE_DIR}/MaskedTextBox/Themes/Generic.xaml"
					"${CMAKE_CURRENT_SOURCE_DIR}/MessageBox/Themes/Generic.xaml"
					"${CMAKE_CURRENT_SOURCE_DIR}/NumericUpDown/Themes/Generic.xaml"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Themes/Generic.xaml"
					"${CMAKE_CURRENT_SOURCE_DIR}/RichTextBoxFormatBar/RichTextBoxFormatBar.xaml"
					"${CMAKE_CURRENT_SOURCE_DIR}/SplitButton/Themes/Generic.xaml"
					"${CMAKE_CURRENT_SOURCE_DIR}/Themes/Common/Generic_Common.xaml"
					"${CMAKE_CURRENT_SOURCE_DIR}/Themes/Generic.xaml"
					"${CMAKE_CURRENT_SOURCE_DIR}/TimePicker/Themes/Generic.xaml"
					"${CMAKE_CURRENT_SOURCE_DIR}/WatermarkTextBox/Themes/Generic.xaml"
					"${CMAKE_CURRENT_SOURCE_DIR}/BusyIndicator/Implementation/BusyIndicator.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/ButtonSpinner/Implementation/ButtonSpinner.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/CalculatorUpDown/Implementation/CalculatorUpDown.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Calculator/Implementation/Calculator.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Calculator/Implementation/CalculatorCommands.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/ChildWindow/Implementation/ChildWindow.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/ChildWindow/Implementation/WindowStartupLocation.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/ChildWindow/Implementation/WindowState.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/ButtonSpinner/Implementation/SpinDirection.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/ButtonSpinner/Implementation/SpinEventArgs.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/ButtonSpinner/Implementation/Spinner.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/ButtonSpinner/Implementation/ValidSpinDirections.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Chromes/Implementation/ButtonChrome.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/ColorCanvas/Implementation/ColorCanvas.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Core/Converters/CalculatorMemoryToVisibilityConverter.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Core/Converters/TimeFormatToDateTimeFormatConverter.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Core/Primitives/HsvColor.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/ColorPicker/Implementation/ColorItem.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/ColorPicker/Implementation/ColorPicker.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Core/Utilities/CalculatorUtilities.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Core/Utilities/ColorUtilities.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/ColorCanvas/Implementation/ColorSpectrumSlider.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Core/Converters/ColorToSolidColorBrushConverter.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Core/Converters/InverseBoolConverter.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Core/Converters/SolidColorBrushToColorConverter.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Core/Utilities/ContextMenuUtilities.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/DateTimeUpDown/Implementation/DateTimeFormat.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/DateTimeUpDown/Implementation/DateTimeInfo.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/DateTimeUpDown/Implementation/DateTimePart.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/DateTimeUpDown/Implementation/DateTimeUpDown.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/DateTimeUpDown/Implementation/DateTimeParser.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/NumericUpDown/Implementation/DecimalUpDown.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/NumericUpDown/Implementation/DoubleUpDown.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/NumericUpDown/Implementation/IntegerUpDown.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Magnifier/Implementation/Converters/BorderThicknessToStrokeThicknessConverter.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Magnifier/Implementation/Converters/RadiusConverter.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Magnifier/Implementation/Magnifier.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Magnifier/Implementation/MagnifierAdorner.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Magnifier/Implementation/MagnifierManager.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Core/Primitives/InputBase.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/MaskedTextBox/Implementation/MaskedTextBox.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/MessageBox/Implementation/MessageBox.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/NumericUpDown/Implementation/NumericUpDown.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Properties/AssemblyInfo.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Properties/Resources.Designer.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Properties/Settings.Designer.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/BusyIndicator/Implementation/VisualStates.BusyIndicator.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Implementation/Converters/ValueSourceToImagePathConverter.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Implementation/Converters/ValueSourceToToolTipConverter.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Implementation/Editors/CheckBoxEditor.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Implementation/Editors/ColorEditor.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Implementation/Editors/ComboBoxEditor.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Implementation/Editors/CustomTypeEditor.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Implementation/CustomTypeEditorCollection.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Implementation/Editors/DateTimeUpDownEditor.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Implementation/Editors/DecimalUpDownEditor.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Implementation/Editors/DoubleUpDownEditor.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Implementation/Editors/EnumComboBoxEditor.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Implementation/Editors/FontComboBoxEditor.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Implementation/Editors/ICustomTypeEditor.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Implementation/Editors/IntegerUpDownEditor.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Implementation/Editors/ITypeEditor.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Implementation/Editors/TextBlockEditor.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Implementation/Editors/TextBoxEditor.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Implementation/Editors/TypeEditor.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Implementation/PropertyGrid.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Implementation/PropertyCategoryItem.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Implementation/PropertyCollection.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Implementation/PropertyItem.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Implementation/Commands/PropertyItemCommands.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/RichTextBoxFormatBar/IRichTextBoxFormatBar.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/RichTextBoxFormatBar/RichTextBoxFormatBar.xaml.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/RichTextBoxFormatBar/RichTextBoxFormatBarManager.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Core/UIElementAdorner.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/RichTextBox/Formatters/ITextFormatter.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/RichTextBox/Formatters/PlainTextFormatter.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/RichTextBox/Formatters/RtfFormatter.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/RichTextBox/Formatters/XamlFormatter.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/RichTextBox/RichTextBox.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Core/Primitives/UpDownBase.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/SplitButton/Implementation/SplitButton.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/TimePicker/Implementation/TimeFormat.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/TimePicker/Implementation/TimeItem.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/TimePicker/Implementation/TimePicker.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/MessageBox/Implementation/VisualStates.MessageBox.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/WatermarkTextBox/Implementation/WatermarkTextBox.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Properties/Resources.resx"
					"${CMAKE_CURRENT_SOURCE_DIR}/MessageBox/Icons/Error48.png"
					"${CMAKE_CURRENT_SOURCE_DIR}/MessageBox/Icons/Information48.png"
					"${CMAKE_CURRENT_SOURCE_DIR}/MessageBox/Icons/Question48.png"
					"${CMAKE_CURRENT_SOURCE_DIR}/MessageBox/Icons/Warning48.png"
					"${CMAKE_CURRENT_SOURCE_DIR}/RichTextBoxFormatBar/Images/Bold16.png"
					"${CMAKE_CURRENT_SOURCE_DIR}/RichTextBoxFormatBar/Images/CenterAlign16.png"
					"${CMAKE_CURRENT_SOURCE_DIR}/RichTextBoxFormatBar/Images/Italic16.png"
					"${CMAKE_CURRENT_SOURCE_DIR}/RichTextBoxFormatBar/Images/JustifyAlign16.png"
					"${CMAKE_CURRENT_SOURCE_DIR}/RichTextBoxFormatBar/Images/LeftAlign16.png"
					"${CMAKE_CURRENT_SOURCE_DIR}/RichTextBoxFormatBar/Images/RightAlign16.png"
					"${CMAKE_CURRENT_SOURCE_DIR}/RichTextBoxFormatBar/Images/Underline16.png"
					"${CMAKE_CURRENT_SOURCE_DIR}/RichTextBoxFormatBar/Images/FontColorPicker16.png"
					"${CMAKE_CURRENT_SOURCE_DIR}/RichTextBoxFormatBar/Images/TextHighlightColorPicker16.png"
					"${CMAKE_CURRENT_SOURCE_DIR}/RichTextBoxFormatBar/Images/Bullets16.png"
					"${CMAKE_CURRENT_SOURCE_DIR}/RichTextBoxFormatBar/Images/Numbering16.png"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Images/SortAscending16.png"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Images/Categorize16.png"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Images/AdvancedProperties11.png"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Images/Inheritance11.png"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Images/Resource11.png"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Images/Database11.png"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Images/Local11.png"
					"${CMAKE_CURRENT_SOURCE_DIR}/PropertyGrid/Images/Style11.png"
)

set_target_properties(WPFToolkit.Extended PROPERTIES FOLDER "engine/sdk/.NET")
