project(WeifenLuo.WinFormsUI.Docking LANGUAGES CSharp)

add_library(WeifenLuo.WinFormsUI.Docking SHARED
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/DockPanel.SplitterDragHandler.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/DockPanel.DragHandler.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/DragForm.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/DockPanel.MdiClientController.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/AutoHideStripBase.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/InertButtonBase.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/DockPanelSkin.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/VS2005AutoHideStrip.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/DockPanel.AutoHideWindow.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/VisibleNestedPaneCollection.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/DockAreasEditor.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/DockContent.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/DockContentCollection.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/DockContentHandler.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/DockPanel.DockDragHandler.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Helpers/DockHelper.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/NestedPaneCollection.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/DockOutlineBase.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/DockPane.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/DockPaneCaptionBase.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/VS2005DockPaneCaption.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/DockPaneCollection.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/DockPanel.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/DockPanelExtender.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/DockPanel.Persistor.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/DockPane.SplitterControl.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/DockPaneStripBase.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/VS2005DockPaneStrip.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/DockWindow.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/DockWindowCollection.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/DockWindow.SplitterControl.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/DummyControl.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Enums.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/DockContentEventArgs.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/FloatWindow.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/FloatWindowCollection.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/DockPanel.FocusManager.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Interfaces.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Measures.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/NestedDockingStatus.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/SplitterBase.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Helpers/DrawHelper.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Localization.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Helpers/ResourceHelper.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Helpers/Win32Helper.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Properties/AssemblyInfo.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Resources.Designer.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Strings.Designer.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Win32/Enums.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Win32/NativeMethods.cs"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Resources.resx"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Strings.resx"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Resources/DockIndicator_PaneDiamond.bmp"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Resources/DockIndicator_PaneDiamond_Bottom.bmp"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Resources/Dockindicator_PaneDiamond_Fill.bmp"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Resources/DockIndicator_PaneDiamond_Hotspot.bmp"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Resources/DockIndicator_PaneDiamond_HotspotIndex.bmp"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Resources/DockIndicator_PaneDiamond_Left.bmp"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Resources/DockIndicator_PaneDiamond_Right.bmp"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Resources/DockIndicator_PaneDiamond_Top.bmp"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Resources/DockIndicator_PanelBottom.bmp"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Resources/DockIndicator_PanelBottom_Active.bmp"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Resources/DockIndicator_PanelFill.bmp"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Resources/DockIndicator_PanelFill_Active.bmp"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Resources/DockIndicator_PanelLeft.bmp"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Resources/DockIndicator_PanelLeft_Active.bmp"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Resources/DockIndicator_PanelRight.bmp"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Resources/DockIndicator_PanelRight_Active.bmp"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Resources/DockIndicator_PanelTop.bmp"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Resources/DockIndicator_PanelTop_Active.bmp"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Resources/DockPane_AutoHide.bmp"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Resources/DockPane_Close.bmp"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Resources/DockPane_Dock.bmp"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Resources/DockPane_Option.bmp"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/Resources/DockPane_OptionOverflow.bmp"
					"${CMAKE_CURRENT_SOURCE_DIR}/Docking/DockPanel.bmp"
)

set_target_properties(WeifenLuo.WinFormsUI.Docking PROPERTIES FOLDER "engine/sdk/.NET")
